# KeyboardGloves

./: CMakeCache.txt  CMakeLists.txt  Makefile  Readme.md  cmake_install.cmake  uartCom.py
src/: .main.cpp.swp  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  findEyeCenter.cpp  main.cpp  main.cpp~  mouseTest.cpp  serialTest.cpp
